feat: add superpowers and claudekit-skills as submodules
- Add obra/superpowers (⭐13k) with 14 core skills
- Add mrgoonie/claudekit-skills (⭐1.1k) with 39 skills
- Remove invalid skill sources (anthropic-skills, awesome-claude-skills)
- Fix packageRoot path to point to project root (../../..)
- Total: 58 skills loaded (9 local + 14 superpowers + 39 claudekit + 5 deep-research)
- Skills breakdown:
  * tooling: 4 skills
  * testing: 5 skills
  * general: 19 skills
  * frontend: 23 skills
  * quality: 1 skill
  * content: 5 skills
  * media: 1 skill

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "deep-research-skills"]
 	path = deep-research-skills
 	url = https://github.com/liangdabiao/Claude-Code-Deep-Research-main.git
+[submodule "claudekit-skills"]
+	path = claudekit-skills
+	url = https://github.com/mrgoonie/claudekit-skills.git
+[submodule "superpowers"]
+	path = superpowers
+	url = https://github.com/obra/superpowers.git
