refactor: 移除 MCP 服务器，转为纯静态网站架构
- 删除 packages/mcp-server 和 packages/shared 包
- 新增 anthropic-skills 和 awesome-claude-skills 子模块
- 整合 200+ 技能来源（Superpowers、Scientific Skills、Deep Research 等）
- 更新 README 文档，反映新的项目结构
- 清理旧的配置文件（.mcp.json、tsconfig.base.json、homebrew-skillscontroller.rb）
- 新增 packages/website/src/data/packages.ts 数据文件

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -32,7 +34,7 @@ jobs:
         run: pnpm install
 
       - name: Build website
-        run: pnpm --filter website build
+        run: pnpm build
 
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/pages-action@v1
